--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,22 +5,13 @@ $o-fonts-assets-path: $o-fonts-name !default;
 
 $o-fonts-is-silent: true !default;
 
-// Variables used by oFontGetFontFamilyWithFallbacks(). Not to be used by modules directly.
-$_o-fonts-serif: Georgia, 'Times New Roman', serif;
-$_o-fonts-sans-serif: BentonSans, Helvetica, Arial, sans-serif;
-$_o-fonts-millerdisplay: MillerDisplay, $_o-fonts-serif;
-$_o-fonts-clarion: Clarion, $_o-fonts-serif;
-$_o-fonts-financierdisplay: FinancierDisplay, serif;
-$_o-fonts-financiertext: FinancierText, serif;
-$_o-fonts-metric: Metric, sans-serif;
-
 $_o-font-families-with-fallbacks: (
-  BentonSans: $_o-fonts-sans-serif,
-  MillerDisplay: $_o-fonts-millerdisplay,
-  Clarion: $_o-fonts-clarion,
-  FinancierDisplay: $_o-fonts-financierdisplay,
-  FinancierText: $_o-fonts-financiertext,
-  Metric: $_o-fonts-metric
+  BentonSans: unquote("BentonSans, sans-serif"),
+  MillerDisplay: unquote("MillerDisplay, serif"),
+  Clarion: unquote("Clarion, Georgia, serif"),
+  FinancierDisplay: unquote("FinancierDisplay, serif"),
+  FinancierText: unquote("FinancierText, serif"),
+  Metric: unquote("Metric, sans-serif")
 );
 
 // Map of all families, each with a list of styles for that family.
@@ -39,14 +30,14 @@ $_o-fonts-families-included: () !default;
 
 
 // These variables are deprecated. Modules should use the oFontsGetFontFamilyForUseCase function instead.
-$o-fonts-sans-serif: $_o-fonts-sans-serif;
-$o-fonts-serif: Georgia, 'Times New Roman', serif;
-$o-fonts-bentonsans-lighter: $o-fonts-sans-serif;
-$o-fonts-bentonsans-normal: $o-fonts-sans-serif;
-$o-fonts-bentonsans-bold: $o-fonts-sans-serif;
-$o-fonts-millerdisplay-normal: MillerDisplay, $o-fonts-serif;
-$o-fonts-millerdisplay-bold: MillerDisplay, $o-fonts-serif;
-$o-fonts-millerdisplay-bolder: MillerDisplay, $o-fonts-serif;
-$o-fonts-clarion-normal: Clarion, $o-fonts-serif;
-$o-fonts-clarion-bold: Clarion, $o-fonts-serif;
-$o-fonts-clarion-italic: Clarion, $o-fonts-serif;
+$o-fonts-sans-serif: oFontsGetFontFamilyWithFallbacks(BentonSans);
+$o-fonts-serif: oFontsGetFontFamilyWithFallbacks(Clarion);
+$o-fonts-bentonsans-lighter: oFontsGetFontFamilyWithFallbacks(BentonSans);
+$o-fonts-bentonsans-normal: oFontsGetFontFamilyWithFallbacks(BentonSans);
+$o-fonts-bentonsans-bold: oFontsGetFontFamilyWithFallbacks(BentonSans);
+$o-fonts-millerdisplay-normal: oFontsGetFontFamilyWithFallbacks(MillerDisplay);
+$o-fonts-millerdisplay-bold: oFontsGetFontFamilyWithFallbacks(MillerDisplay);
+$o-fonts-millerdisplay-bolder: oFontsGetFontFamilyWithFallbacks(MillerDisplay);
+$o-fonts-clarion-normal: oFontsGetFontFamilyWithFallbacks(Clarion);
+$o-fonts-clarion-bold: oFontsGetFontFamilyWithFallbacks(Clarion);
+$o-fonts-clarion-italic: oFontsGetFontFamilyWithFallbacks(Clarion);
