--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,34 +1,24 @@
-$o-fonts-path: '//build.origami.ft.com/files/o-fonts-assets@0.2.2/' !default;
-$o-fonts-name: o-fonts;
-$o-fonts-version: null !default;
-$o-fonts-assets-path: $o-fonts-name !default;
-
 $o-fonts-is-silent: true !default;
 
 // Variables used by oFontGetFontFamilyWithFallbacks(). Not to be used by modules directly.
 $_o-fonts-serif: Georgia, 'Times New Roman', serif;
 $_o-fonts-sans-serif: BentonSans, Helvetica, Arial, sans-serif;
-$_o-fonts-millerdisplay: MillerDisplay, $_o-fonts-serif;
-$_o-fonts-clarion: Clarion, $_o-fonts-serif;
 $_o-fonts-financierdisplay: FinancierDisplay, serif;
 $_o-fonts-financiertext: FinancierText, serif;
 $_o-fonts-metric: Metric, sans-serif;
 
 $_o-font-families-with-fallbacks: (
   BentonSans: $_o-fonts-sans-serif,
-  MillerDisplay: $_o-fonts-millerdisplay,
-  Clarion: $_o-fonts-clarion,
   FinancierDisplay: $_o-fonts-financierdisplay,
   FinancierText: $_o-fonts-financiertext,
-  Metric: $_o-fonts-metric
+  Metric: $_o-fonts-metric,
+  Georgia: $_o-fonts-serif
 );
 
 // Map of all families, each with a list of styles for that family.
 // Only families and styles listed here will be allowed to be declared as @font-faces via the oFontsInclude mixin.
 $_o-fonts-families: (
   BentonSans: (lighter, normal, bold),
-  MillerDisplay: (normal, bold),
-  Clarion: (normal, bold, (normal, italic)),
   FinancierDisplay: (normal, (normal, italic)),
   FinancierText: (normal, (normal, italic)),
   Metric: (normal, (normal, italic), bold, (bold, italic))
@@ -44,9 +34,3 @@ $o-fonts-serif: Georgia, 'Times New Roman', serif;
 $o-fonts-bentonsans-lighter: $o-fonts-sans-serif;
 $o-fonts-bentonsans-normal: $o-fonts-sans-serif;
 $o-fonts-bentonsans-bold: $o-fonts-sans-serif;
-$o-fonts-millerdisplay-normal: MillerDisplay, $o-fonts-serif;
-$o-fonts-millerdisplay-bold: MillerDisplay, $o-fonts-serif;
-$o-fonts-millerdisplay-bolder: MillerDisplay, $o-fonts-serif;
-$o-fonts-clarion-normal: Clarion, $o-fonts-serif;
-$o-fonts-clarion-bold: Clarion, $o-fonts-serif;
-$o-fonts-clarion-italic: Clarion, $o-fonts-serif;
