Add Georgia as font fallback for FinancierTextWeb
Preceding `serif`

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -58,7 +58,7 @@ $o-fonts-families: (
 		)
 	),
 	FinancierTextWeb: (
-		font-family: 'FinancierTextWeb, serif',
+		font-family: 'FinancierTextWeb, Georgia, serif',
 		variants: (
 			(weight: regular, style: normal),
 			(weight: regular, style: italic)
