--- a/test/scss/_mixins.test.scss
+++ b/test/scss/_mixins.test.scss
@@ -1,10 +1,10 @@
-@include test-module('oFontsIncludeCustomFont') {
+@include test-module('oFontsDefineCustomFont') {
 	@include test('Outputs the custom font face and updates the "$o-fonts-families" map.') {
 
         @include assert {
             // Include a custom font with regular and bold variants.
             @include output {
-                @include oFontsIncludeCustomFont('MyFont, sans', (
+                @include oFontsDefineCustomFont('MyFont, sans', (
                     (weight: regular, style: normal),
                     (weight: bold, style: normal)
                 )) {
