--- a/src/scss/_functions.scss
+++ b/src/scss/_functions.scss
@@ -1,14 +1,21 @@
-/// Check if a font variant exists for a family
+/// Check if a font variant exists for a family.
+/// If the font has not been defined returns true by default.
 ///
 /// @access public
 /// @param {String} $family - one of $o-fonts-families
 /// @param {String} $weight [regular] - The font weight.
 /// @param {String} $style [normal] - The font style.
 /// @return {Bool}
+/// @see oFontsDefineCustomFont To register a custom font's avalible variants.
 @function oFontsVariantExists($family, $weight, $style) {
 	$weight: if($weight, $weight, 'regular'); // Handles a falsy `$weight` value.
 	$style: if($style, $style, 'normal'); // Handles a falsy `$style` value.
 	$font-properties: map-get($o-fonts-families, $family);
+	// Could not find supported font variants.
+	// Trust the user, assume a system font or that the variant exists for their font.
+	@if type-of($font-properties) != 'map' {
+		@return true;
+	}
 	$font-variants: map-get($font-properties, variants);
 
 	@each $variant in $font-variants {
