Only include fonts required per brand.

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -73,10 +73,11 @@
 	}
 }
 
-/// Output all Font-face declarations which are provided by Origami.
+/// Output all default Font-face declarations.
 @mixin oFontsIncludeAll {
-	@each $family, $properties in $o-fonts-families {
-		@if not map-get($properties, 'custom') {
+	@each $family in $_o-fonts-default-families {
+		$properties: map-get($o-fonts-families, $family);
+		@if has not map-get($properties, 'custom') {
 			@each $variant in map-get($properties, variants) {
 				@include oFontsInclude($family, map-get($variant, weight), map-get($variant, style));
 			}
