--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -73,10 +73,10 @@
 	}
 }
 
-/// Output all default Font-face declarations.
+/// Output all Font-face declarations.
+/// @deprecated Use oFonts instead.
 @mixin oFontsIncludeAll {
-	@each $family in $_o-fonts-default-families {
-		$properties: map-get($o-fonts-families, $family);
+	@each $family, $properties in $o-fonts-families {
 		@if has not map-get($properties, 'custom') {
 			@each $variant in map-get($properties, variants) {
 				@include oFontsInclude($family, map-get($variant, weight), map-get($variant, style));
