--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -133,7 +133,7 @@
 		@if(not $font-family-included and $font-family-supports-variable-italic) {
 			@supports (font-variation-settings: 'ital' 0) {
 				@font-face {
-					src: url('http://localhost:5000/' + '#{$family}-VF-Italic' + '.woff2') format('woff2');
+					src: url($o-fonts-path + '#{$family}-VF-Italic.woff2') format('woff2');
 					font-family: "#{$family}VF";
 					font-style: italic;
 
@@ -143,7 +143,7 @@
 		@if(not $font-family-included and $font-family-supports-variable-weight) {
 			@supports (font-variation-settings: 'wght' 400) {
 				@font-face {
-					src: url('http://localhost:5000/' + '#{$family}-VF-Regular' + '.woff2') format('woff2');
+					src: url($o-fonts-path + '#{$family}-VF-Regular.woff2') format('woff2');
 					font-family: "#{$family}VF";
 					font-style: normal;
 				}
